--- a/src/v001/v001.ioc
+++ b/src/v001/v001.ioc
@@ -1,34 +1,35 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversion
+ADC1.Channel-18\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-19\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.IPParameters=Rank-18\#ChannelRegularConversion,Channel-18\#ChannelRegularConversion,SamplingTime-18\#ChannelRegularConversion,NbrOfConversionFlag,master,Rank-19\#ChannelRegularConversion,Channel-19\#ChannelRegularConversion,SamplingTime-19\#ChannelRegularConversion,NbrOfConversion,InjNumberOfConversion
+ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Rank-18\#ChannelRegularConversion=1
+ADC1.Rank-19\#ChannelRegularConversion=2
+ADC1.SamplingTime-18\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-19\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_NORMAL
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.I2C2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C2_TX.1.Instance=DMA1_Channel4
-Dma.I2C2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C2_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_TX.1.Mode=DMA_NORMAL
-Dma.I2C2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C2_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.I2C2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC1
-Dma.Request1=I2C2_TX
+Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.1.Instance=DMA1_Channel1
+Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.1.Mode=DMA_NORMAL
+Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C2_TX.0.Instance=DMA1_Channel4
+Dma.I2C2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_TX.0.Mode=DMA_NORMAL
+Dma.I2C2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_TX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=I2C2_TX
+Dma.Request1=ADC1
 Dma.RequestsNb=2
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE
 FREERTOS.Tasks01=defaultTask,0,1000,StartDefaultTask,Default
@@ -130,11 +131,7 @@ PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=_keyR
 PB0.Signal=ADCx_IN8
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=_keyL
 PB1.Signal=ADCx_IN9
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
