--- a/src/v001/v001.ioc
+++ b/src/v001/v001.ioc
@@ -34,7 +34,7 @@ Dma.RequestsNb=2
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE
 FREERTOS.Tasks01=defaultTask,0,1000,StartDefaultTask,Default
 FREERTOS.configMINIMAL_STACK_SIZE=500
-FREERTOS.configTOTAL_HEAP_SIZE=15000
+FREERTOS.configTOTAL_HEAP_SIZE=20000
 File.Version=6
 I2C1.I2C_Mode=I2C_Standard
 I2C1.IPParameters=I2C_Mode
@@ -99,6 +99,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -167,10 +168,12 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=_led1
 PC5.Locked=true
 PC5.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=_dreq
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC6.GPIO_Label=DREQ
+PC6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC6.GPIO_PuPd=GPIO_PULLDOWN
 PC6.Locked=true
-PC6.Signal=GPIO_Input
+PC6.Signal=GPXTI6
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=_xCS
 PC7.Locked=true
@@ -245,6 +248,8 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CalculateBaudRate=281.25 KBits/s
 SPI1.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler
@@ -262,3 +267,4 @@ VP_RTC_No_RTC_Output.Signal=RTC_No_RTC_Output
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=v001
+boardIOC=true
