--- a/src/v001/v001.ioc
+++ b/src/v001/v001.ioc
@@ -31,10 +31,11 @@ Dma.I2C2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.Request0=I2C2_TX
 Dma.Request1=ADC1
 Dma.RequestsNb=2
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE,configUSE_IDLE_HOOK
 FREERTOS.Tasks01=defaultTask,0,1000,StartDefaultTask,Default
 FREERTOS.configMINIMAL_STACK_SIZE=500
 FREERTOS.configTOTAL_HEAP_SIZE=20000
+FREERTOS.configUSE_IDLE_HOOK=1
 File.Version=6
 I2C1.I2C_Mode=I2C_Standard
 I2C1.IPParameters=I2C_Mode
@@ -83,7 +84,7 @@ Mcu.Pin28=PB7
 Mcu.Pin29=VP_FREERTOS_VS_ENABLE
 Mcu.Pin3=PD1-OSC_OUT
 Mcu.Pin30=VP_RTC_No_RTC_Output
-Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin31=VP_SYS_VS_tim5
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
@@ -105,6 +106,9 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TimeBase=TIM5_IRQn
+NVIC.TimeBaseIP=TIM5
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -264,7 +268,7 @@ VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_RTC_No_RTC_Output.Mode=RTC_OUT_NO
 VP_RTC_No_RTC_Output.Signal=RTC_No_RTC_Output
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim5.Mode=TIM5
+VP_SYS_VS_tim5.Signal=SYS_VS_tim5
 board=v001
 boardIOC=true
